<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_randomize"
        android:icon="@drawable/random_i"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/randomize_image"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/help_i"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/action_share_image"
        android:icon="@drawable/link_i"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/share_image"/>
    <item
        android:id="@+id/action_open_browser"
        android:icon="@drawable/www_i"
        android:orderInCategory="96"
        android:showAsAction="never"
        android:title="@string/show_in_browser"/>
    <item
        android:id="@+id/action_rate"
        android:icon="@drawable/handshake_i"
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/rate_this_app"/>

</menu>